Fix dropdown z-index (#449) (#450)

--- a/src/scripts/OSUIFramework/Pattern/Dropdown/scss/_dropdown-search.scss
+++ b/src/scripts/OSUIFramework/Pattern/Dropdown/scss/_dropdown-search.scss
@@ -13,11 +13,6 @@
 		}
 	}
 
-	// Added this selector to override the z-index because the Virtual Select adds inline z-index to vscomp-wrapper and prevents the visibility of pattern above other patterns
-	.vscomp-wrapper {
-		z-index: 3;
-	}
-
 	// Service Studio Preview
 	&-ss-preview {
 		-servicestudio-background-color: var(--color-neutral-0);
